--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,1 @@
-<div class="main-page">
-  <h1>Welcome to CinemaFlix!</h1>
-  <button
-    mat-raised-button
-    (click)="openUserRegistrationDialog()"
-    style="margin-right: 10px"
-    color="primary"
-  >
-    Sign Up
-  </button>
-  <button (click)="openUserLoginDialog()" mat-raised-button color="primary">
-    Login
-  </button>
-</div>
+<router-outlet></router-outlet>
