--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div>
+  <app-navbar *ngIf="toolbarVisible()"></app-navbar>
+  <router-outlet></router-outlet>
+</div>
