--- a/src/app/director/director.component.html
+++ b/src/app/director/director.component.html
@@ -1,21 +1,14 @@
-<mat-card class="director-dialog">
-  <button
-    class="director-close-button"
-    mat-stroked-button
-    aria-label="Close the director details button"
-    mat-dialog-close
-    color="primary"
-  >
-    X
-  </button>
-  <mat-card-title>
-    <h3 class="director-dialog-title">{{ data.Name }}</h3>
-  </mat-card-title>
+<mat-card>
+  <mat-card-title style="color: white">{{ data.Name }}</mat-card-title>
   <br />
-  <mat-dialog-content class="director-dialog-content">
+  <mat-dialog-content style="color: white">
     <b>Birthday: </b>{{ data.Birth }}
     <br />
-    <br />
-    {{ data.Bio }}
+    <b>Bio: </b>{{ data.Bio }}
   </mat-dialog-content>
+  <mat-card-actions>
+    <button aria-label="Close the director details button" mat-dialog-close>
+      X
+    </button>
+  </mat-card-actions>
 </mat-card>
