--- a/src/app/genre/genre.component.html
+++ b/src/app/genre/genre.component.html
@@ -1,18 +1,12 @@
-<mat-card class="genre-dialog">
-  <button
-    class="genre-close-button"
-    mat-stroked-button
-    aria-label="Close the genre details button"
-    mat-dialog-close
-    color="primary"
-  >
-    X
-  </button>
-  <mat-card-title>
-    <h3 class="genre-dialog-title">{{ data.Name }}</h3>
-  </mat-card-title>
+<mat-card>
+  <mat-card-title style="color: white">{{ data.Name }}</mat-card-title>
   <br />
-  <mat-dialog-content class="genre-dialog-content">
-    {{ data.Description }}
+  <mat-dialog-content style="color: white">
+    <b>Description: </b>{{ data.Description }}
   </mat-dialog-content>
+  <mat-card-actions>
+    <button aria-label="Close the genre details button" mat-dialog-close>
+      X
+    </button>
+  </mat-card-actions>
 </mat-card>
