--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -1,16 +1,19 @@
 img {
-  width: 320px;
-  height: 460px;
+  width: 280px;
+  height: 410px;
   padding: 8px;
   border-radius: 15px;
 }
 .header {
-  display: block;
-  padding-bottom: 8px;
-  background-color: #c541e7b7;
+  padding-bottom: 10px;
+  margin-top: 5px;
+  background-color: #b536d5d1;
+  border-radius: 10px;
+  text-align: center;
+  color: #fff;
 }
 button {
-  background-color: #c541e7b7;
+  background-color: #b536d5d1;
   color: #fff;
   padding: 10px 15px;
   margin-left: 10px;
@@ -28,21 +31,31 @@ button:hover {
 }
 
 .flex {
-  justify-content: space-between;
-  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 15px 0;
+  min-height: 100%;
 }
+
+.mat-card {
+  background-color: rgba(0, 0, 0, 0.806);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  margin: 15px;
+  margin-top: 70px;
+  border: 0.6px solid rgba(245, 245, 245, 0.775);
+}
+
 .add-to-favorite-btn {
   &:hover {
+    transform: translateY(-2px);
     cursor: pointer;
-  }
-
-  .mat-icon {
-    &.not-favorite {
-      color: white;
-    }
-
-    &.favorite {
-      color: red;
-    }
   }
 }
