--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,18 +1,9 @@
-<mat-card class="summary-dialog">
-  <button
-    class="summary-close-button"
-    mat-stroked-button
-    aria-label="Close the summary button"
-    mat-dialog-close
-    color="primary"
-  >
-    X
-  </button>
-  <mat-card-title>
-    <h3 class="summary-dialog-title">{{ data.Title }}</h3>
-  </mat-card-title>
+<mat-card>
   <br />
-  <mat-dialog-content class="summary-dialog-content">
-    {{ data.Description }}
+  <mat-dialog-content style="color: white">
+    <b>Summary: </b>{{ data.Description }}
   </mat-dialog-content>
+  <mat-card-actions>
+    <button aria-label="Close the summary button" mat-dialog-close>X</button>
+  </mat-card-actions>
 </mat-card>
