--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="nav-bar">
-  <h1 class="top-title">CinemaFlix!</h1>
-  <button mat-button (click)="toMovies()">Movies</button>
-  <span></span>
-  <button mat-button (click)="toProfile()">Profile</button>
-  <span></span>
-  <button mat-button (click)="logout()" class="logout-button">
-    <mat-icon>logout</mat-icon> Logout
-  </button>
+  <div>
+    <button mat-button (click)="toMovies()">CinemaFlix</button>
+  </div>
+  <div>
+    <button mat-button (click)="toProfile()">Profile</button>
+    <button mat-button (click)="logout()" class="logout-button">
+      <mat-icon>logout</mat-icon> Log Out
+    </button>
+  </div>
 </div>
-<h1 class="nav-spacer">CinemaFlix</h1>
