--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -27,8 +27,6 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button (click)="loginUser()" color="primary">
-      Log In
-    </button>
+    <button (click)="loginUser()">Log In</button>
   </mat-card-actions>
 </mat-card>
