--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,15 +1,15 @@
-<app-navbar />
 <div class="profile-page">
   <mat-card class="profile-card">
-    <mat-card-header class="profile-card-header">
-      <mat-card-title style="margin: 0 0 1.15em"
-        ><h2>
-          Hey there, <b>{{ updatedUser.Username }}</b>
+    <mat-card-header>
+      <mat-card-title
+        ><h2 class="user-name">
+          Welcome,
+          <b>{{ updatedUser.Username }}</b>
         </h2></mat-card-title
       >
     </mat-card-header>
     <mat-card-content class="user-profile-card-content">
-      <form class="user-info">
+      <form>
         <mat-form-field>
           <mat-label>Username</mat-label>
           <input
@@ -48,22 +48,24 @@
             matInput
             [(ngModel)]="updatedUser.Birthday"
             type="date"
-            value="{{ updatedUser.Birthday | date : 'yyyy-MM-dd' : 'UTC+0' }}"
+            value="{{ updatedUser.Birthday | date : 'yyyy-MM-dd' }}"
             name="Birthday"
           />
         </mat-form-field>
       </form>
     </mat-card-content>
-    <mat-card-actions class="user-profile-actions">
-      <button mat-raised-button (click)="updateUserInfo()" color="basic">
+    <mat-card-actions>
+      <button style="background-color: #b536d58e" (click)="updateUserInfo()">
         <mat-icon>edit</mat-icon>
         Update profile
       </button>
-      <button mat-raised-button (click)="deleteUserInfo()" color="warn">
+      <button
+        style="background-color: rgba(255, 0, 0, 0.789)"
+        (click)="deleteUserInfo()"
+      >
         <mat-icon>delete_forever</mat-icon>
         Delete account
       </button>
     </mat-card-actions>
   </mat-card>
-  <!-- <app-user-favorite-movies /> -->
 </div>
