--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,19 +1,7 @@
-<div class="main-page">
-  <h1>Welcome to CinemaFlix!</h1>
-  <button
-    mat-raised-button
-    (click)="openUserRegistrationDialog()"
-    style="margin-right: 10px"
-    color="primary"
-  >
-    Sign Up
-  </button>
-  <button
-    mat-raised-button
-    color="primary"
-    (click)="openUserLoginDialog()"
-    style="margin-right: 10px"
-  >
-    Login
-  </button>
-</div>
+<mat-card>
+  <mat-card-title>Welcome to CinemaFlix!</mat-card-title>
+  <mat-card-actions>
+    <button (click)="openUserRegistrationDialog()">Sign Up</button>
+    <button (click)="openUserLoginDialog()">Login</button>
+  </mat-card-actions>
+</mat-card>
