--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -1,7 +1,7 @@
 $boxShadow: 0 2px 5px rgba(230, 222, 222, 0.779);
 
 .profile-page {
-  height: 600px;
+  height: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,4 +59,10 @@ button {
 button:hover {
   transform: translateY(-2px);
   box-shadow: $boxShadow;
+}
+
+@media screen and (max-width: 350) {
+  button {
+    color: black;
+  }
 }
